--- a/_sass/template/components/_component--home.scss
+++ b/_sass/template/components/_component--home.scss
@@ -204,6 +204,7 @@
 	.toc-section ul {
 		list-style: none;
 		@include stack(md);
+		padding-left: 0;
 	}
 
 	.toc-science {
