--- a/_sass/template/components/_component--media-hero-img.scss
+++ b/_sass/template/components/_component--media-hero-img.scss
@@ -30,6 +30,7 @@
 
 	.caption {
 		color: color(neutral, XXXX);
+		margin-left: -20px;
 	}
 
 	.credit {
