--- a/_sass/template/components/_component--media-hero-video.scss
+++ b/_sass/template/components/_component--media-hero-video.scss
@@ -20,6 +20,7 @@
 
 	.caption {
 		color: color(neutral, XXXX);
+		margin-left: -20px;
 	}
 
 	.credit {
